2005-04-21 09:35  patthoyts

	* jim-win32.c: RegisterClass, CreateWindow and UpdateWindow. Need
	  to add user defined Window procedures though.

2005-04-20 17:34  patthoyts

	* jim-win32.c: Added some window managing APIs - MoveWindow,
	  ShowWindow, DestroyWindow and AnimateWindow (which doesn't seem
	  to work).

2005-04-19 17:33  patthoyts

	* jim-win32.c: Added CreateDirectory and RemoveDirectory

2005-04-18 10:31  antirez

	* ChangeLog, Makefile, jim-eventloop.c, jim-eventloop.h, jim.c,
	  jim.h: First version of the Jim eventloop extension, exporting
	  [after], [vwait], and the C API to write other extensions using
	  events. No win32 port for now, just posix. UDP extension will
	  follow shortly and will be the first extension using the event
	  loop.

2005-04-13 21:57  patthoyts

	* jim-win32.c: Added GetLastInputInfo API

2005-04-13 21:54  patthoyts

	* jim-win32api.c: Win32API module permits dynamic creation of Jim
	  commands that call into Win32 DLL functions. Its not complete and
	  at the moment only void or integer parameters are working.

2005-04-13 21:50  patthoyts

	* jimsh.c: JimGetExePath needs to be a _path_ not the file name.

2005-04-12 14:36  antirez

	* ChangeLog, jim-aio.c: AIO fix: the Id is not get with the
	  GetGlobalVar function.

2005-04-12 14:27  antirez

	* ChangeLog, jim.c: string tolower/toupper support

2005-04-12 10:34  antirez

	* ChangeLog, jim-aio.c: new methods for AIO files, 'read' and
	  'eof'. Documentation still no longer in sync.

2005-04-11 19:25  chi

	* jim.c: - Remove the '%lu' scan format specification. The largest
	  possible type   in the Jim core is jim_wide. That type is a
	  signed one. A unsigned   variante of jim_wide is not forseen. So
	  a '%lu' specification seems not   to make any sense.

	  - Some extra castings necessary to let the Jim core interpreter
	  compile and	run under Tru64U on Dec Alpha.

	  - Fix a bug in UpdateStringOfList(). If a list was created via